testing/stage_15/invalid/short_char.c
int main()
{
	short char a=4;
	return a;
}